# global-conquest

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  EC2_MIGRATION_PLAN.md  MISSING_FUNCTIONALITY.md
.claude/architecture/: architecture.md  canonical-patterns.md  repository-map.md  system-overview.md
.github/workflows/: deploy-ec2.yml  deploy.yml  infra-ec2.yml  infra.yml
analytics/: .env.example  .gitignore  README.md  Untitled.ipynb  pyproject.toml
analytics/src/global_conquest_analytics/: __init__.py  board_fit.py  charts.py  cli.py  combat.py  config.py  db.py  extract.py  fit.py  gbt_fit.py  gcn_fit.py  report.py  streak_report.py  streaks.py  td_fit.py  training_data.py  validation.py  weights_export.py
analytics/tests/: test_board_fit.py  test_combat.py  test_gbt_fit.py  test_gcn_fit.py  test_streaks.py  test_td_fit.py  test_validation.py  test_weights_export.py
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  tournament-batch.json
backend/docs/: docs.go  (+3 more)
deploy/: .env.example  Caddyfile  docker-compose.prod.yml
frontend/: package-lock.json  package.json
global-conquest/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
infra/: alb.tf  bootstrap.sh  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  terraform.tfvars  variables.tf  vpc.tf
infra-ec2/: ec2.tf  iam.tf  main.tf  outputs.tf  security_groups.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
memory/: MEMORY.md  feedback_event_builder_pattern.md
server/: .env  global-conquest-firebase-adminsdk-264d4-306f0765d2.json  package-lock.json  package.json
(+315 files in other folders)
